patch methode and appointment controller to date filter
